minor diction change

--- a/paperclip_main.htm
+++ b/paperclip_main.htm
@@ -37,7 +37,7 @@
 
     </div>
 
-    <button type="button" onclick="manager()">Purchase Manager</button>
+    <button type="button" onclick="manager()">Purchase a Manager</button>
 
 </body>
 
