still trying to fix problems with aligning top bar

--- a/paperclip_main.htm
+++ b/paperclip_main.htm
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-    <div id="topBar">
-        <div id="topCredits">
-            Code Clicker<sub>(Patent Pending)</sub>, 2025 - Jimmy Savaryn -
+    <main>
+        <div class="topBar">
+            <section class="topInfo">
+                <p class="left">Code Clicker, 2025 - Jimmy Savaryn -</p>
+                <a href="paperclip_about.htm" target="_blank" class="right"> About</a>
+            </section>
+                
         </div>
-        <div id="topAbout">
-            <a href="paperclip_about.htm" target="_blank"> About</a> -
-        </div>
+    </main>
         <!--
         <p>
             <a href="https://github.com/LightRiver3010" target="_blank">Github</a> - 
