adding more managers and balancing them; fixing price boxes

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
         </div>
         <div class="upgrades">
             <button type="button" class="upgrade-button" onclick="buy_upgrade1()">
-                <div id="upgrade-title">2x Click Power -</div>
+                <div id="upgrade-title">2x Click Power</div>
                 <div class="upgrade-count" id="upgrade1count">0</div>
                 <div class="upgrade-price">
                     <p>Price: <span id="upgrade1price">50</span></p>
                 </div>
             </button>
             <button type="button" class="upgrade-button" onclick="buy_upgrade2()">
-                <div id="upgrade-title">Fibbonacci Bonus - </div>
+                <div id="upgrade-title">Fibbonacci Bonus</div>
                 <div class="upgrade-count" id="upgrade2count">0</div>
                 <div class="upgrade-price">
                     <p>Price: <span id="upgrade2price">1</span></p>
                 </div>
             </button>
-            <button type="button" class="upgrade-button" onclick="">
-                <div id="upgrade-title">Upgrade 3 - </div>
-                <div class="upgrade-count" id="upgrade2count">0</div>
+            <button type="button" class="upgrade-button" onclick="buy_upgrade3()">
+                <div id="upgrade-title">Auto-click</div>
+                <div class="upgrade-count" id="upgrade3count">0</div>
                 <div class="upgrade-price">
-                    <p>Price: <span id="upgrade2price">1</span></p>
+                    <p>Price: <span id="upgrade3price">1</span></p>
                 </div>
             </button>
         </div>
@@ -75,9 +75,39 @@
         </div>
         <div class="managers">
             <button type="button" class="manage-button" onclick="buy_manager1()">
-                <div>Manager</div>
+                <div id="manager_title">Baby</div>
                 <div class="manage-count" id="manager1count">0</div>
-                <div class="manage-price" id="manager1price">10</div>
+                <div class="manage-price">
+                    <p>Price: <span id="manager1price">10</span></p>
+                </div>
+            </button>
+            <button type="button" class="manage-button" onclick="buy_manager2()">
+                <div id="manager_title">Middle-Schooler</div>
+                <div class="manage-count" id="manager2count">0</div>
+                <div class="manage-price">
+                    <p>Price: <span id="manager2price">10</span></p>
+                </div>
+            </button>
+            <button type="button" class="manage-button" onclick="buy_manager3()">
+                <div id="manager_title">High-Schooler</div>
+                <div class="manage-count" id="manager3count">0</div>
+                <div class="manage-price">
+                    <p>Price: <span id="manager3price">10</span></p>
+                </div>
+            </button>
+            <button type="button" class="manage-button" onclick="buy_manager4()">
+                <div id="manager_title">Code Monkey</div>
+                <div class="manage-count" id="manager4count">0</div>
+                <div class="manage-price">
+                    <p>Price: <span id="manager4price">10</span></p>
+                </div>
+            </button>
+            <button type="button" class="manage-button" onclick="buy_manager5()">
+                <div id="manager_title">CEO</div>
+                <div class="manage-count" id="manager5count">0</div>
+                <div class="manage-price">
+                    <p>Price: <span id="manager5price">10</span></p>
+                </div>
             </button>
         </div>
     </div>
