--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </div>
         <div class="upgrades">
             <button type="button" class="upgrade-button" onclick="buy_upgrade1()">
+                <div class="upgrade-hover-textbox">
+                    <h6>Double the power of your click and earn <strong>2x as many bits!</strong></h6>
+                    <p>"Double double, toil and trouble..."</p>
+                </div>
                 <div id="upgrade-title">2x Click Power</div>
                 <div class="upgrade-count" id="upgrade1count">0</div>
                 <div class="upgrade-price">
@@ -63,7 +67,11 @@
                 </div>
             </button>
             <button type="button" class="upgrade-button" onclick="buy_upgrade3()">
-                <div id="upgrade-title">Auto-click</div>
+                <div class="upgrade-hover-textbox">
+                    <h6>Buy an autoclicker to <strong>click for you once per second!</strong></h6>
+                    <p>Test</p>
+                </div>
+                <div id="upgrade-title">Auto-clicker</div>
                 <div class="upgrade-count" id="upgrade3count">0</div>
                 <div class="upgrade-price">
                     <p>Price: <span id="upgrade3price">1</span></p>
