added some images

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     <p id="mgr2quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/baby.png">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
@@ -477,7 +477,7 @@
                     <p id="mgr3quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/monkey.png">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
@@ -502,7 +502,7 @@
                     <p id="mgr4quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/hacker.png">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
@@ -527,7 +527,7 @@
                     <p id="mgr5quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/startup.jpg">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
@@ -552,7 +552,7 @@
                     <p id="mgr6quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/tech_firm.png">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
@@ -577,7 +577,7 @@
                     <p id="mgr7quote">"..."</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets/bitgpt.png">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
