added background music and sound effects for clicking and purchasing

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <button class="settings-button" onclick="reset_data()">
                             Reset Data
                         </button>
-                        <button class="settings-button" onclick="">
+                        <button class="settings-button" onclick="audio_toggle()">
                             Toggle Audio
                         </button>
                     </div>
@@ -110,7 +110,7 @@
                             - Reset All Data. WARNING: CANNOT BE UNDONE!
                         </div>
                         <div class="button-desc">
-                            - Turns audio on or off
+                            - Turns music on or off
                         </div>
                     </div>
                     <div class="thanks-side">
