added question marks to replace the title and images of managers that players can't reach yet

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager1_title" class="manager_title">Cat</div>
+                        <div id="manager1_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager1count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -455,7 +455,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager2_title" class="manager_title">Baby</div>
+                        <div id="manager2_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager2count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -480,7 +480,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager3_title" class="manager_title">Monkey</div>
+                        <div id="manager3_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager3count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -505,7 +505,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager4_title" class="manager_title">Hacker</div>
+                        <div id="manager4_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager4count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -530,7 +530,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager5_title" class="manager_title">Bitz.io</div>
+                        <div id="manager5_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager5count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -555,7 +555,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager6_title" class="manager_title">Tech Firm</div>
+                        <div id="manager6_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager6count">0</div>
                     </div>
                     <div class="mgr-bottom">
@@ -580,7 +580,7 @@
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
-                        <div id="manager7_title" class="manager_title">BitGPT</div>
+                        <div id="manager7_title" class="manager_title">???</div>
                         <div class="manage-count" id="manager7count">0</div>
                     </div>
                     <div class="mgr-bottom">
