--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <img id="click-box" src="assets/border.jpg" ,
-                    alt="click me!" , onclick="code_click()">
+                    alt="click me!">
                 <svg class="star invisible" viewBox = "0 0 100 100" aria-hidden="true" id="won-star">
                     <polygon points="50,5 61,38 95,38 67,59 78,92 50,72 22,92 33,59 5,38 39,38">
                 </svg>
@@ -426,7 +426,7 @@
                     <p id="mgr1quote">"Oh he can click all right. But does he want to do it for YOU?"</p>
                 </div>
                 <div class="mgr-img">
-                    <img src="assets\big_poo_cat.png">
+                    <img src="assets\cat.webp">
                 </div>
                 <div class="mgr-rest">
                     <div class="mgr-top">
